ze_alien_shooter_v7_2_csgo2

--- a/ze_alien_shooter_v7_2_csgo2/stripper/ze_alien_shooter_v7_2_csgo2.cfg
+++ b/ze_alien_shooter_v7_2_csgo2/stripper/ze_alien_shooter_v7_2_csgo2.cfg
@@ -1,1 +1,49 @@
-// no stripper needed
+; --->
+; > Fix stripper by HeeChan
+; > Contract me if you found a bug
+; --->
+
+; --->
+; fixing wrong output
+; --->
+modify:
+{
+    match:
+    {
+        "classname" "logic_auto"
+        "hammerid" "103"
+    }
+    delete:
+    {
+        "OnMapSpawn" "ServerCommandMessage --- Map Ported by HeeChan ---101"
+    }
+    insert:
+    {
+        "OnMapSpawn" "Map_Game_TextAddOutputMessage --- Map Ported by HeeChan ---101"
+    }
+}
+; --->
+; Fix no kevlar on new round
+; Giving bizon instead of P90
+; --->
+modify:
+{
+    match:
+    {
+       "classname" "game_player_equip"
+       "origin" "1704 612 16"
+    }
+    delete:
+    {
+        "weapon_p90" "1"
+    }
+    insert:
+    {
+        "weapon_bizon" "1"
+    }
+    	replace:
+	{
+		"spawnflags" "2"
+	}
+
+}
