ze_alien_shooter_v7_2_csgo2

--- a/ze_alien_shooter_v7_2_csgo2/stripper/ze_alien_shooter_v7_2_csgo2.cfg
+++ b/ze_alien_shooter_v7_2_csgo2/stripper/ze_alien_shooter_v7_2_csgo2.cfg
@@ -20,6 +20,7 @@ modify:
     insert:
     {
         "OnMapSpawn" "Map_Game_TextAddOutputMessage --- Map Ported by HeeChan ---101"
+        "OnMapSpawn" "ServerCommandsay --- Stripper #1 loaded ---111"
     }
 }
 ; --->
