alien shooter stripper

--- a/ze_alien_shooter_v7_2_csgo2/stripper/ze_alien_shooter_v7_2_csgo2.cfg
+++ b/ze_alien_shooter_v7_2_csgo2/stripper/ze_alien_shooter_v7_2_csgo2.cfg
@@ -1,5 +1,5 @@
 ; --->
-; > Fix stripper by HeeChan
+; > Fix stripper by HeeChan 
 ; > Contract me if you found a bug
 ; --->
 
@@ -46,5 +46,75 @@ modify:
 	{
 		"spawnflags" "2"
 	}
-
+}
+; --->
+;        "UseLandmarkAngles" "1"
+; --->
+modify:
+{
+    match:
+    {
+        "targetname" "Lab_Teleport_Trigger_On_Lasers"
+        "classname" "trigger_teleport"
+    }
+    insert:
+    {
+        "UseLandmarkAngles" "1"
+    }
+}
+modify:
+{
+    match:
+    {
+        "targetname" "teleport_to_last_room"
+        "classname" "trigger_teleport"
+    }
+    replace:
+    {
+        "UseLandmarkAngles" "1"
+    }
+}
+; --->
+; ending fix
+; --->
+modify:
+{
+    match:
+    {
+        "targetname" "teleport_to_last_room"
+        "classname" "trigger_teleport"
+    }
+    delete:
+    {
+        "OnStartTouch" "last_teleportStart30-1"
+        "OnStartTouch" "serverCommandsay -- Defend for 30 seconds ---0-1"
+        "OnStartTouch" "Base_Global_Teleport_In_LabDisable29.25-1"
+    }
+    insert:
+    {
+        "OnStartTouch" "last_teleportStart301"
+    }
+}
+modify:
+{
+    match:
+    {
+        "targetname" "last_trigger_teleport"
+        "classname" "trigger_once"
+    }
+    insert:
+    {
+        "OnStartTouch" "Base_Global_Teleport_In_LabDisable291"
+    }
+}
+; --->
+; Secret_item issue
+; --->
+add:
+{
+    "model" "*44"
+    "classname" "trigger_multiple"
+    "targetname" "speed_fix"
+    "origin" "0 -120 88"
+    "OnStartTouch" "!activatorAddOutputgravity 10-1"
 }
